# ygsq

./: .gitignore  LICENSE  README.md  pyproject.toml
ygsq/chat/: __main__.py  webui.py
ygsq/llm_api/: __init__.py  base.py  chatglm.py  qwen.py  spark.py  yiyan.py
